--- a/misty_capstone_folder/mists-working.ipynb
+++ b/misty_capstone_folder/mists-working.ipynb
@@ -19,6 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Acquire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Use spark! "
    ]
   },
@@ -139,8 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list1 = df1.columns\n",
-    "list4 = df4.columns"
+    "cols_df1 = df1.columns\n",
+    "cols_df4 = df4.columns\n",
+    "remove_traits_list = list(set(cols_df4).difference(cols_df1))"
    ]
   },
   {
@@ -150,49 +158,6 @@
    "outputs": [],
    "source": [
     "remove_traits_list = list(set(list4).difference(list1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['smart_170_normalized',\n",
-       " 'smart_23_raw',\n",
-       " 'smart_16_raw',\n",
-       " 'smart_168_raw',\n",
-       " 'smart_174_normalized',\n",
-       " 'smart_231_raw',\n",
-       " 'smart_232_normalized',\n",
-       " 'smart_173_raw',\n",
-       " 'smart_231_normalized',\n",
-       " 'smart_218_raw',\n",
-       " 'smart_173_normalized',\n",
-       " 'smart_24_raw',\n",
-       " 'smart_232_raw',\n",
-       " 'smart_233_normalized',\n",
-       " 'smart_218_normalized',\n",
-       " 'smart_168_normalized',\n",
-       " 'smart_233_raw',\n",
-       " 'smart_24_normalized',\n",
-       " 'smart_17_normalized',\n",
-       " 'smart_174_raw',\n",
-       " 'smart_23_normalized',\n",
-       " 'smart_170_raw',\n",
-       " 'smart_16_normalized',\n",
-       " 'smart_17_raw']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "remove_traits_list"
    ]
   },
   {
@@ -367,6 +332,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Remove extra columms and combine years into one dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95\n",
+      "95\n",
+      "105\n",
+      "129\n"
+     ]
+    }
+   ],
+   "source": [
+    "for df in [df_2016, df_2017, df_2018, df_2019]:\n",
+    "    print(len(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_2016 = df_2016.columns\n",
+    "cols_2019 = df_2019.columns\n",
+    "remove_traits_list = list(set(cols_2019).difference(cols_2016))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for trait in remove_traits_list:\n",
+    "    df_2018 = df_2018.drop(trait)\n",
+    "    df_2019 = df_2019.drop(trait)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95\n",
+      "95\n",
+      "95\n",
+      "95\n"
+     ]
+    }
+   ],
+   "source": [
+    "for df in [df_2016, df_2017, df_2018, df_2019]:\n",
+    "    print(len(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_2019.union(df_2018).union(df_2017).union(df_2016)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Extract max values from top five SMART attributes and convert to pandas"
    ]
   },
@@ -431,6 +476,194 @@
    "source": [
     "# df = data_to_pandas(df_2016)\n",
     "# df.to_csv(r'./hard_drives_2016.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data_to_pandas(df)\n",
+    "df.to_csv(r'./hard_drives_smart_5.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Will now code everying in pandas! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 169073 entries, 0 to 169072\n",
+      "Data columns (total 9 columns):\n",
+      "serial_number         169072 non-null object\n",
+      "model                 169073 non-null object\n",
+      "capacity_bytes        169073 non-null object\n",
+      "max(failure)          169073 non-null object\n",
+      "max(smart_9_raw)      161975 non-null object\n",
+      "max(smart_5_raw)      161851 non-null object\n",
+      "max(smart_187_raw)    104189 non-null object\n",
+      "max(smart_197_raw)    161841 non-null object\n",
+      "max(smart_198_raw)    161841 non-null object\n",
+      "dtypes: object(9)\n",
+      "memory usage: 11.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>serial_number</th>\n",
+       "      <th>model</th>\n",
+       "      <th>capacity_bytes</th>\n",
+       "      <th>max(failure)</th>\n",
+       "      <th>max(smart_9_raw)</th>\n",
+       "      <th>max(smart_5_raw)</th>\n",
+       "      <th>max(smart_187_raw)</th>\n",
+       "      <th>max(smart_197_raw)</th>\n",
+       "      <th>max(smart_198_raw)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>176FT026T</td>\n",
+       "      <td>TOSHIBA MQ01ABF050M</td>\n",
+       "      <td>500107862016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9965</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17eddeea3c620010</td>\n",
+       "      <td>DELLBOSS VD</td>\n",
+       "      <td>480036847616</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18K0A02ZF97G</td>\n",
+       "      <td>TOSHIBA MG07ACA14TA</td>\n",
+       "      <td>14000519643136</td>\n",
+       "      <td>1</td>\n",
+       "      <td>99</td>\n",
+       "      <td>43</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2AGHLPBY</td>\n",
+       "      <td>HGST HUH721212ALN604</td>\n",
+       "      <td>12000138625024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>990</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2AGM5WEY</td>\n",
+       "      <td>HGST HUH721212ALN604</td>\n",
+       "      <td>12000138625024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>978</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      serial_number                 model  capacity_bytes max(failure)  \\\n",
+       "0         176FT026T   TOSHIBA MQ01ABF050M    500107862016            0   \n",
+       "1  17eddeea3c620010           DELLBOSS VD    480036847616            0   \n",
+       "2      18K0A02ZF97G   TOSHIBA MG07ACA14TA  14000519643136            1   \n",
+       "3          2AGHLPBY  HGST HUH721212ALN604  12000138625024            0   \n",
+       "4          2AGM5WEY  HGST HUH721212ALN604  12000138625024            0   \n",
+       "\n",
+       "  max(smart_9_raw) max(smart_5_raw) max(smart_187_raw) max(smart_197_raw)  \\\n",
+       "0             9965                0               None                  0   \n",
+       "1             None             None               None               None   \n",
+       "2               99               43               None                  0   \n",
+       "3              990                0               None                  0   \n",
+       "4              978                0               None                  0   \n",
+       "\n",
+       "  max(smart_198_raw)  \n",
+       "0                  0  \n",
+       "1               None  \n",
+       "2                  0  \n",
+       "3                  0  \n",
+       "4                  0  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
