--- a/tim_capstone_folder/tim_notebook.ipynb
+++ b/tim_capstone_folder/tim_notebook.ipynb
@@ -1859,6 +1859,165 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['hitachi', 'seagate', 'western digital', 'toshiba', 'dell',\n",
+       "       'samsung', 'unknown'], dtype=object)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df.manufacturer.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ST12000NM0007                          39779\n",
+       "ST4000DM000                            36802\n",
+       "ST8000NM0055                           17305\n",
+       "HGST HMS5C4040BLE640                   17011\n",
+       "HGST HUH721212ALN604                   12036\n",
+       "ST8000DM002                            10345\n",
+       "HGST HMS5C4040ALE640                    8813\n",
+       "Hitachi HDS5C3030ALA630                 4563\n",
+       "Hitachi HDS722020ALA330                 4503\n",
+       "Hitachi HDS5C4040ALE630                 2639\n",
+       "ST6000DX000                             1942\n",
+       "HGST HUH721212ALE600                    1564\n",
+       "ST10000NM0086                           1329\n",
+       "TOSHIBA MG07ACA14TA                     1328\n",
+       "WDC WD30EFRX                            1167\n",
+       "HGST HUH728080ALE600                    1102\n",
+       "Hitachi HDS723030ALA640                 1000\n",
+       "ST500LM012 HN                            804\n",
+       "TOSHIBA MQ01ABF050                       589\n",
+       "WDC WD60EFRX                             471\n",
+       "ST4000DM001                              425\n",
+       "TOSHIBA MQ01ABF050M                      410\n",
+       "WDC WD5000LPVX                           343\n",
+       "WDC WD10EADS                             295\n",
+       "ST31500541AS                             264\n",
+       "ST500LM030                               261\n",
+       "ST4000DX000                              212\n",
+       "WDC WD20EFRX                             158\n",
+       "TOSHIBA MD04ABA400V                      152\n",
+       "HGST HDS5C4040ALE630                     117\n",
+       "                                       ...  \n",
+       "WDC WD10EARS                               3\n",
+       "WDC WD3200AAJS                             3\n",
+       "ST6000DM004                                3\n",
+       "Hitachi HDS724040ALE640                    3\n",
+       "Seagate BarraCuda SSD ZA2000CM10002        3\n",
+       "WDC WD2500AAJS                             3\n",
+       " 00MD00                                    2\n",
+       "WDC WD3200AAJB                             2\n",
+       "WDC WD1600BPVT                             2\n",
+       "WDC WD5003ABYX                             2\n",
+       "WDC WD10EARX                               2\n",
+       "WDC WD2500BEVT                             1\n",
+       "ST1000LM024 HN                             1\n",
+       "Hitachi HDT725025VLA380                    1\n",
+       "WDC WD1001FALS                             1\n",
+       "WDC WD800JD                                1\n",
+       "WDC WD2500AAJB                             1\n",
+       "ST31500341AS                               1\n",
+       "Hitachi HDS5C3030BLE630                    1\n",
+       "WDC WD800LB                                1\n",
+       "WDC WD3200AAKS                             1\n",
+       "WDC WD10EALS                               1\n",
+       "WDC WD3200LPVX                             1\n",
+       "SAMSUNG HD154UI                            1\n",
+       "WDC WD15EARS                               1\n",
+       "WDC WD3200BEKT                             1\n",
+       "ST3500320AS                                1\n",
+       "ST33000651AS                               1\n",
+       "WDC WD1000FYPS                             1\n",
+       "HGST HMS5C4040BLE641                       1\n",
+       "Name: model, Length: 103, dtype: int64"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df.model.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count            169073\n",
+       "unique              103\n",
+       "top       ST12000NM0007\n",
+       "freq              39779\n",
+       "Name: model, dtype: object"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df.model.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 169073 entries, 0 to 169072\n",
+      "Data columns (total 12 columns):\n",
+      "Unnamed: 0            169073 non-null int64\n",
+      "serial_number         169072 non-null object\n",
+      "model                 169073 non-null object\n",
+      "capacity_bytes        169073 non-null int64\n",
+      "max(failure)          169073 non-null int64\n",
+      "max(smart_9_raw)      161975 non-null float64\n",
+      "max(smart_5_raw)      161851 non-null float64\n",
+      "max(smart_187_raw)    104189 non-null float64\n",
+      "max(smart_188_raw)    104179 non-null float64\n",
+      "max(smart_197_raw)    161841 non-null float64\n",
+      "max(smart_198_raw)    161841 non-null float64\n",
+      "manufacturer          169073 non-null object\n",
+      "dtypes: float64(6), int64(3), object(3)\n",
+      "memory usage: 15.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
