--- a/tim_capstone_folder/tim_notebook.ipynb
+++ b/tim_capstone_folder/tim_notebook.ipynb
@@ -2018,6 +2018,281 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "seagate            110097\n",
+       "hitachi             53473\n",
+       "western digital      2826\n",
+       "toshiba              2604\n",
+       "dell                   60\n",
+       "samsung                11\n",
+       "unknown                 2\n",
+       "Name: manufacturer, dtype: int64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df.manufacturer.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#check duplicate serial numbers\n",
+    "counts = all_df.serial_number.value_counts() > 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7041"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         False\n",
+       "1         False\n",
+       "2         False\n",
+       "3         False\n",
+       "4         False\n",
+       "5         False\n",
+       "6         False\n",
+       "7         False\n",
+       "8         False\n",
+       "9         False\n",
+       "10        False\n",
+       "11        False\n",
+       "12        False\n",
+       "13        False\n",
+       "14        False\n",
+       "15        False\n",
+       "16        False\n",
+       "17        False\n",
+       "18        False\n",
+       "19        False\n",
+       "20        False\n",
+       "21        False\n",
+       "22        False\n",
+       "23        False\n",
+       "24        False\n",
+       "25        False\n",
+       "26        False\n",
+       "27        False\n",
+       "28        False\n",
+       "29        False\n",
+       "          ...  \n",
+       "115120    False\n",
+       "115121    False\n",
+       "115122    False\n",
+       "115123    False\n",
+       "115124    False\n",
+       "115125    False\n",
+       "115126    False\n",
+       "115127    False\n",
+       "115128    False\n",
+       "115129    False\n",
+       "115130    False\n",
+       "115131    False\n",
+       "115132    False\n",
+       "115133    False\n",
+       "115134    False\n",
+       "115135    False\n",
+       "115136    False\n",
+       "115137    False\n",
+       "115138    False\n",
+       "115139    False\n",
+       "115140    False\n",
+       "115141    False\n",
+       "115142    False\n",
+       "115143    False\n",
+       "115144    False\n",
+       "115145    False\n",
+       "115146    False\n",
+       "115147    False\n",
+       "115148    False\n",
+       "115149    False\n",
+       "Name: serial_number, Length: 115150, dtype: bool"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df.serial_number=='PL2331LAHB93UJ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>serial_number</th>\n",
+       "      <th>model</th>\n",
+       "      <th>smart_9_raw</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>77265</th>\n",
+       "      <td>PL2331LAHB93UJ</td>\n",
+       "      <td>HGST HMS5C4040ALE640</td>\n",
+       "      <td>5141.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        serial_number                 model  smart_9_raw\n",
+       "77265  PL2331LAHB93UJ  HGST HMS5C4040ALE640       5141.0"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['serial_number', 'model','smart_9_raw']][df.serial_number=='PL2331LAHB93UJ']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PL2331LAHB93UJ    3\n",
+       "ZA180Z6F          2\n",
+       "ZA189WP8          2\n",
+       "AAG7LSXH          2\n",
+       "ZA16V32F          2\n",
+       "AAGXW8VH          2\n",
+       "ZA13Q2Q9          2\n",
+       "ZA189WQN          2\n",
+       "ZA1805X8          2\n",
+       "ZA180Q9A          2\n",
+       "AAHKXNHH          2\n",
+       "ZA135NCY          2\n",
+       "AAHL9S3H          2\n",
+       "ZCH06VZD          2\n",
+       "ZCH07DGF          2\n",
+       "Z304K4BE          2\n",
+       "ZA12Z10T          2\n",
+       "PL1331LAGSRPUH    2\n",
+       "ZA16DSD8          2\n",
+       "ZA16D59G          2\n",
+       "PL1331LAHDDTWH    2\n",
+       "2AGLY67Y          2\n",
+       "S300X9GK          2\n",
+       "ZA10RRGP          2\n",
+       "8HH6YGDH          2\n",
+       "PL1331LAGSPZKH    2\n",
+       "2AGPSGKY          2\n",
+       "8HKDYTMH          2\n",
+       "ZA14EVVG          2\n",
+       "Z304JGCP          2\n",
+       "                 ..\n",
+       "8HJ9J22H          1\n",
+       "Z305DHSE          1\n",
+       "ZJV121VM          1\n",
+       "Z300JC7F          1\n",
+       "PL2331LAGRJR6J    1\n",
+       "ZA212EPB          1\n",
+       "ZA13Z49D          1\n",
+       "PL1331LAGSAGTH    1\n",
+       "Z30252HS          1\n",
+       "ZCH07ES6          1\n",
+       "8CH15DHE          1\n",
+       "AAG6KVXH          1\n",
+       "AAHL4M9H          1\n",
+       "66HLS2P1S         1\n",
+       "W300KQPN          1\n",
+       "ZJV11HDE          1\n",
+       "S30107B5          1\n",
+       "S300ZRF2          1\n",
+       "ZJV11GVH          1\n",
+       "ZCH09PCR          1\n",
+       "ZCH086SF          1\n",
+       "Z302A0JK          1\n",
+       "ZCH070K6          1\n",
+       "ZCH05ELQ          1\n",
+       "Z300WN5Y          1\n",
+       "ZJV04EZZ          1\n",
+       "ZJV12Z4C          1\n",
+       "ZCH0CXTC          1\n",
+       "ZCH0A1LL          1\n",
+       "Z302ETHL          1\n",
+       "Name: serial_number, Length: 162030, dtype: int64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_df.serial_number.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
