--- a/hard_drive_pipeline.ipynb
+++ b/hard_drive_pipeline.ipynb
@@ -8,21 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data wrangling\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# py files\n",
-    "import acquire\n",
-    "import prepare"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,9 +21,30 @@
     "Goal\n",
     "- Determine which hard drives are the most reliable by classifing and predicting hard drive failure rates. \n",
     "\n",
-    "Hypotheses\n",
-    "- h1 \n",
-    "- h2\n"
+    "Hypotheses (MVP)\n",
+    "- The 5 SMART (Self-Monitoring, Analysis and Reporting Technology) stats identified by Backblaze will indicate device hard drive failure\n",
+    "- Hard drive fail rates will vary by model \n",
+    "- Hard drives fail rates will vary by manufacturer \n",
+    "\n",
+    "Hypotheses (Futher Iterations)\n",
+    "- Industry and consumer units will perform about the same\n",
+    "- Helium or non-helium would not have significantly different failure rates \n",
+    "- Helium or non-helium will not affect lifespan of drives "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data wrangling\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# py files\n",
+    "import acquire\n",
+    "import prepare"
    ]
   },
   {
@@ -493,6 +499,38 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 162025 entries, 0 to 169067\n",
+      "Data columns (total 11 columns):\n",
+      "serial_number                    162024 non-null object\n",
+      "manufacturer                     162025 non-null object\n",
+      "model                            162025 non-null object\n",
+      "capacity_gigabytes               162025 non-null float64\n",
+      "failure                          162025 non-null int64\n",
+      "drive_age_in_years               161965 non-null float64\n",
+      "reallocated_sectors_count        161841 non-null float64\n",
+      "reported_uncorrectable_errors    104186 non-null float64\n",
+      "command_timeout                  104176 non-null float64\n",
+      "current_pending_sector_count     161831 non-null float64\n",
+      "uncorrectable_sector_count       161831 non-null float64\n",
+      "dtypes: float64(7), int64(1), object(3)\n",
+      "memory usage: 14.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -631,7 +669,7 @@
        "4                           0.0                         0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
