--- a/Johns_capstone_folder/Johns_capstone_copy.ipynb
+++ b/Johns_capstone_folder/Johns_capstone_copy.ipynb
@@ -1575,6 +1575,307 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>serial_number</th>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>model</th>\n",
+       "      <th>capacity_gigabytes</th>\n",
+       "      <th>failure</th>\n",
+       "      <th>drive_age_in_years</th>\n",
+       "      <th>reallocated_sectors_count</th>\n",
+       "      <th>reported_uncorrectable_errors</th>\n",
+       "      <th>command_timeout</th>\n",
+       "      <th>current_pending_sector_count</th>\n",
+       "      <th>uncorrectable_sector_count</th>\n",
+       "      <th>early_failure</th>\n",
+       "      <th>quartile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>68</td>\n",
+       "      <td>Z304KBQR</td>\n",
+       "      <td>Seagate</td>\n",
+       "      <td>ST4000DM000</td>\n",
+       "      <td>4000.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Q3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>97</td>\n",
+       "      <td>WD-WMC4N2899457</td>\n",
+       "      <td>Western Digital</td>\n",
+       "      <td>WDC WD30EFRX</td>\n",
+       "      <td>3000.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Q3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>116</td>\n",
+       "      <td>Z302FETY</td>\n",
+       "      <td>Seagate</td>\n",
+       "      <td>ST4000DM000</td>\n",
+       "      <td>4000.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Q3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>120</td>\n",
+       "      <td>S300Z3ZL</td>\n",
+       "      <td>Seagate</td>\n",
+       "      <td>ST4000DM000</td>\n",
+       "      <td>4000.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Q1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>133</td>\n",
+       "      <td>ZA13R24Q</td>\n",
+       "      <td>Seagate</td>\n",
+       "      <td>ST8000DM002</td>\n",
+       "      <td>8001.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Q2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>169052</td>\n",
+       "      <td>ZJV5HDV2</td>\n",
+       "      <td>Seagate</td>\n",
+       "      <td>ST12000NM0007</td>\n",
+       "      <td>12000.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Q1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>169053</td>\n",
+       "      <td>AAG779PH</td>\n",
+       "      <td>Hitachi</td>\n",
+       "      <td>HGST HUH721212ALN604</td>\n",
+       "      <td>12000.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Q1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>169054</td>\n",
+       "      <td>AAG6XZGH</td>\n",
+       "      <td>Hitachi</td>\n",
+       "      <td>HGST HUH721212ALN604</td>\n",
+       "      <td>12000.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Q1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>169055</td>\n",
+       "      <td>Z302ZCWX</td>\n",
+       "      <td>Seagate</td>\n",
+       "      <td>ST4000DM000</td>\n",
+       "      <td>4000.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Q1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>169067</td>\n",
+       "      <td>ZJV13JY4</td>\n",
+       "      <td>Seagate</td>\n",
+       "      <td>ST12000NM0007</td>\n",
+       "      <td>12000.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Q1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>43343 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          serial_number     manufacturer                 model  \\\n",
+       "68             Z304KBQR          Seagate           ST4000DM000   \n",
+       "97      WD-WMC4N2899457  Western Digital          WDC WD30EFRX   \n",
+       "116            Z302FETY          Seagate           ST4000DM000   \n",
+       "120            S300Z3ZL          Seagate           ST4000DM000   \n",
+       "133            ZA13R24Q          Seagate           ST8000DM002   \n",
+       "...                 ...              ...                   ...   \n",
+       "169052         ZJV5HDV2          Seagate         ST12000NM0007   \n",
+       "169053         AAG779PH          Hitachi  HGST HUH721212ALN604   \n",
+       "169054         AAG6XZGH          Hitachi  HGST HUH721212ALN604   \n",
+       "169055         Z302ZCWX          Seagate           ST4000DM000   \n",
+       "169067         ZJV13JY4          Seagate         ST12000NM0007   \n",
+       "\n",
+       "        capacity_gigabytes  failure  drive_age_in_years  \\\n",
+       "68                  4000.8        1                 3.6   \n",
+       "97                  3000.6        1                 2.9   \n",
+       "116                 4000.8        1                 3.1   \n",
+       "120                 4000.8        1                 1.4   \n",
+       "133                 8001.6        1                 2.4   \n",
+       "...                    ...      ...                 ...   \n",
+       "169052             12000.1        0                 0.0   \n",
+       "169053             12000.1        0                 0.6   \n",
+       "169054             12000.1        0                 0.6   \n",
+       "169055              4000.8        0                 0.1   \n",
+       "169067             12000.1        0                 0.1   \n",
+       "\n",
+       "        reallocated_sectors_count  reported_uncorrectable_errors  \\\n",
+       "68                            8.0                           11.0   \n",
+       "97                            0.0                            0.0   \n",
+       "116                           0.0                            4.0   \n",
+       "120                           0.0                            0.0   \n",
+       "133                        1984.0                            1.0   \n",
+       "...                           ...                            ...   \n",
+       "169052                        0.0                            0.0   \n",
+       "169053                        0.0                            0.0   \n",
+       "169054                        0.0                            0.0   \n",
+       "169055                        0.0                            0.0   \n",
+       "169067                        0.0                           27.0   \n",
+       "\n",
+       "        command_timeout  current_pending_sector_count  \\\n",
+       "68                  0.0                          72.0   \n",
+       "97                  0.0                          12.0   \n",
+       "116                 0.0                          40.0   \n",
+       "120                 0.0                           0.0   \n",
+       "133                 0.0                           0.0   \n",
+       "...                 ...                           ...   \n",
+       "169052              0.0                           0.0   \n",
+       "169053              0.0                           0.0   \n",
+       "169054              0.0                           0.0   \n",
+       "169055              0.0                           0.0   \n",
+       "169067              0.0                          32.0   \n",
+       "\n",
+       "        uncorrectable_sector_count early_failure quartile  \n",
+       "68                            72.0         False       Q3  \n",
+       "97                             0.0         False       Q3  \n",
+       "116                           40.0         False       Q3  \n",
+       "120                            0.0          True       Q1  \n",
+       "133                            0.0         False       Q2  \n",
+       "...                            ...           ...      ...  \n",
+       "169052                         0.0          True       Q1  \n",
+       "169053                         0.0          True       Q1  \n",
+       "169054                         0.0          True       Q1  \n",
+       "169055                         0.0          True       Q1  \n",
+       "169067                        32.0          True       Q1  \n",
+       "\n",
+       "[43343 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df.failure==1)|(df.drive_age_in_years>1.6)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
