--- a/Johns_capstone_folder/Johns_capstone_copy.ipynb
+++ b/Johns_capstone_folder/Johns_capstone_copy.ipynb
@@ -1627,6 +1627,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_my_data(x, y, train_pct):\n",
+    "\n",
+    "    x_train, x_test, y_train, y_test =  train_test_split(x,y, train_size = train_pct, random_state = 999)\n",
+    "\n",
+    "    return x_train, x_test, y_train, y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
